--- a/color-switch/styles.css
+++ b/color-switch/styles.css
@@ -2,6 +2,19 @@
 
 :root {
     --theme-color: #3e84da;
+    --link-color: #daa33e;
+    --fr-layout: 1fr 1fr 1fr;
+}
+
+/* overrides default link color */
+nav {
+    --link-color: #000;
+}
+
+@media screen and (max-width: 760px){
+    :root{
+        --fr-layout: 1fr;
+    }
 }
 
 /* --- Main styles --- */
@@ -26,7 +39,7 @@ nav.main-nav ul{
 }
 
 nav a{
-    color: #daa33e;
+    color: var(--link-color);
 }
 
 .banner{
@@ -52,7 +65,7 @@ nav a{
 }
 
 .spot h2{
-    color: #3e84da;
+    color: var(--theme-color);
 }
 
 .spot p{
@@ -62,7 +75,7 @@ nav a{
 }
 
 .content a{
-    color: #daa33e;
+    color: var(--link-color);
     font-size: 1.2em;
 }
 
@@ -73,7 +86,7 @@ footer{
 
 footer .blurbs{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: var(--fr-layout);
     max-width: 760px;
     margin: 0 auto;
     grid-gap: 40px;
@@ -84,4 +97,12 @@ footer .blurb{
     color: #333;
     line-height: 2em;
     font-size: 0.9em
+}
+
+.swatches span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 10px;
+    cursor: pointer;
 }
